update properties comments

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# Env variables
 spring.jpa.hibernate.ddl-auto=update
-my-properties.path=C:\\Users\\Chen\\Desktop\\test.docx
-my-properties.numberOfQuestions=5
+# DDL Config
+my-properties.path= puth you docx path over here
+my-properties.numberOfQuestions= choose the number of question in each test
