--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # Env variables
-spring.jpa.hibernate.ddl-auto=update
-# DDL Config
-my-properties.path= puth you docx path over here
+my-properties.path= put you docx path over here
 my-properties.numberOfQuestions= choose the number of question in each test
+
+
+# DDL Config
+spring.jpa.hibernate.ddl-auto=update
