--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Env variables
-my-properties.path= put you docx path over here
+my-properties.path= put your docx path over here
 my-properties.numberOfQuestions= choose the number of question in each test
 
 
